--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 /* Setup */
 html {
   /* Change default typefaces here */
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 137.5%;
   -webkit-font-smoothing: antialiased;
 }
@@ -47,7 +47,7 @@ h4,
 h5,
 h6 {
   /* Change heading typefaces here */
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   margin-top: 1.5rem;
   margin-bottom: 0;
   line-height: 1.5rem;
@@ -56,13 +56,11 @@ h6 {
 h1 {
   font-size: 4.242rem;
   line-height: 4.5rem;
-  margin-top: 3rem;
 }
 
 h2 {
   font-size: 2.828rem;
   line-height: 3rem;
-  margin-top: 3rem;
 }
 
 h3 {
@@ -109,19 +107,27 @@ code {
   margin-top: 0;
 }
 
-
 body {
   margin: 0 5%;
 }
 
-.container{
+.container {
   max-width: 768px;
   margin: 0 auto 3rem;
 }
 
-a:link, a:visited {
-    color: blue;
+a:link,
+a:visited {
+  color: #444;
 }
 a:hover {
-    color: red;
+  color: #444;
+}
+
+.box {
+  margin: 2rem 0;
+}
+
+pre {
+  color: #444;
 }
