--- a/style.css
+++ b/style.css
@@ -128,6 +128,8 @@ a:hover {
   margin: 2rem 0;
 }
 
-pre {
-  color: #444;
-}
+code { background: #f4f4f4; padding: 4px; border-radius: 4px; }
+pre { background: #f4f4f4; padding: 10px; border-radius: 4px; overflow-x: auto; }
+table { width: 100%; border-collapse: collapse; margin-top: 10px; }
+table th, table td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+th { background: #f4f4f4; }
